# wakethevote

./: .gitignore  README.mkd  pyproject.toml  setup.py
data/: fips.csv
data/states/: .keepme
src/wakethevote/: __init__.py  census.py  cli.py  counties.py  download.py  export.py  logger.py  main.py  org_units.py  paths.py  preview.py  types.py
tests/: test_counties.py  test_wakethevote.py
